Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1137

flock owner incorrectly handled on the server side

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.3.0, Lustre 2.1.2
    • Lustre 2.1.0, Lustre 2.3.0
    • None
    • Client 1.8.x and less. Server 2.1.x
    • 3
    • 4662

      During flock transmission on the server side the owner field incorrectly handled. This is a reason of errors on 1.8 & 1.6 clients.

      whole history is traced at the CLSTR-23
      http://jira-nss.xy01.xyratex.com:8080/browse/CLSTR-23

        1. Log1.zip
          582 kB
        2. Log2.log
          8.25 MB

            wc-triage WC Triage
            igolovach Iurii Golovach (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: