lustre/ldlm/ldlm_request.c
@@ -591,7 +591,7 @@ int ldlm_cli_enqueue_fini(struct obd_export *exp, struct ptlrpc_request *req,
                         if (!(type == LDLM_IBITS && !(exp->exp_connect_flags &
                                                     OBD_CONNECT_IBITS)))
                                 /* We assume lock type cannot change on server*/
-                                ldlm_convert_policy_to_local(
+                                ldlm_convert_policy_to_local(exp,
                                                 lock->l_resource->lr_type,
                                                 &reply->lock_desc.l_policy_data,
                                                 &lock->l_policy_data);
